--- a/public/css/index.css
+++ b/public/css/index.css
@@ -38,10 +38,10 @@
     width: 24px;
     height: 24px;
     cursor: pointer;
-    background-color: #d1c8df; /* Same as header */
+    background-color: #d1c8df;
     border-radius: 4px;
     border: 1px solid #333;
-    appearance: none; /* Remove default styling */
+    appearance: none;
     -webkit-appearance: none;
     position: relative;
 }
