--- a/public/css/edit.css
+++ b/public/css/edit.css
@@ -1,11 +1,11 @@
 /* Form Container */
 form {
     max-width: 600px;
-    margin: 0 auto;
+    margin: 0 auto 1rem auto;
     padding: 20px;
     background-color: #1e1e1e;
     border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    border: 1px solid #292929;
 }
 
 /* Headings */
@@ -19,7 +19,7 @@ h2 {
 /* Input Fields */
 input[type="text"],
 textarea {
-    width: 100%;
+    width: 96%;
     padding: 12px;
     margin-bottom: 15px;
     border: 1px solid #333;
@@ -27,7 +27,6 @@ textarea {
     background-color: #2d2d2d;
     color: #e0e0e0;
     font-size: 1rem;
-    transition: border-color 0.3s ease;
 }
 
 input[type="text"]:focus,
