--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,7 +2,7 @@
 .add-todo-btn {
     display: inline-block;
     padding: 0.5rem 1rem;
-    margin-bottom: 1.5rem;
+    margin-bottom: .5rem;
     background-color: #bb86fc;
     color: #121212;
     border-radius: 6px;
@@ -23,14 +23,15 @@
     display: flex;
     align-items: flex-start;
     padding: 1rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.3rem;
     background: #1e1e1e;
-    border-radius: 8px;
+    border-bottom: 1px solid #333;
+    border-radius: 0px;
 }
 
 .todo-checkbox {
     min-width: 24px;
-    margin-right: .5rem;
+    margin-right: .2rem;
 }
 
 /* Style only the checkbox */
@@ -38,12 +39,12 @@
     width: 24px;
     height: 24px;
     cursor: pointer;
-    background-color: #d1c8df;
-    border-radius: 4px;
+    background-color: #ffffff;
     border: 1px solid #333;
     appearance: none;
     -webkit-appearance: none;
     position: relative;
+    border-radius: 50%;
 }
 
 /* Checked state - keep purple accent */
@@ -73,7 +74,7 @@
     color: #e0e0e0;
     position: relative;
     display: inline-block;
-    line-height: 1.5;
+    line-height: 1.7;
 }
 
 .todo-title.completed {
@@ -84,7 +85,7 @@
     content: "";
     position: absolute;
     left: 0;
-    top: 63%;
+    top: 60%;
     width: 100%;
     height: 1px;
     background: #8a8a8a;
@@ -92,7 +93,7 @@
 }
 
 .todo-description {
-    margin: 0.5rem 0 0 0;
+    margin: 0.2rem 0 0 0;
     color: #8a8a8a;
     font-size: 0.95rem;
     padding-left: 0;
